document link and abstract added.

--- a/spjc.ipynb
+++ b/spjc.ipynb
@@ -13,6 +13,13 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Leaf Classification Project\n",
+        "\n",
+        "It is impossible to overestimate the significance of plant identification in industries like medicine, botany, and the food business. The identification of a plant's species relies heavily on its leaves, however this can be challenging if the leaves have a complicated backdrop that causes interferences and overlaps. This paper evaluates three machine learning techniques for identifying leaf photos in order to solve this issue. The suggested strategy entails first collecting morphological and texture information from the area of interest, then using classification techniques to identify leaves. According to the testing findings, this method reaches a peak accuracy of 75%. This method, which is crucial in many sectors, can considerably improve automated systems for plant identification.\n",
+        "\n",
+        "More information found in the google document below: \n",
+        "https://docs.google.com/document/d/1Fo0gS5RvHTSdCsmYdcrwn2UbKiE52q3Y2axMukNq7nU/edit?usp=sharing\n",
+        "\n",
         "# Load Packages"
       ],
       "metadata": {
@@ -21,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "_-W_lECnw6Su"
       },
@@ -61,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "isqepca9BzPN"
       },
@@ -124,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -163,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -207,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -276,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -536,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -576,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "nrIjmgmuOzVJ",
         "colab": {
@@ -633,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -646,7 +653,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Time: 88.7397780418396\n"
+            "Training Time: 88.7397780418396\n",
+            "Training Time: 64.99607706069946\n"
           ]
         }
       ],
@@ -680,7 +688,7 @@
         "id": "wgeRSeeWMk5n",
         "outputId": "815e7a27-f5f7-413c-c72e-63277813b1fe"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,7 +722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -773,7 +781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -844,7 +852,7 @@
         "id": "2W0FObQk2QO7",
         "outputId": "0e8c6b5c-4be7-4dda-ae1d-95695fe812e4"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,7 +887,7 @@
         "id": "WM_oK-PzdeH7",
         "outputId": "065f00a6-be02-4df8-bf75-e11bf4aecd21"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
